maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:58: error: ';' expected but '=' found.
      (minNX, minNY, min) = processNeighbor(x, y, 1, 0, min);
                          ^ShortestPathMaze:59: error: ';' expected but '=' found.
      (minNX, minNY, min) = processNeighbor(x, y, 0, -1, min);
                          ^ShortestPathMaze:60: error: ';' expected but '=' found.
      (minNX, minNY, min) = processNeighbor(x, y, 0, 1, min);
                          ^